--- a/okteto-stack.yml
+++ b/okteto-stack.yml
@@ -6,7 +6,9 @@ services:
     environment:
       SPRING_DATASOURCE_USERNAME: okteto
       SPRING_DATASOURCE_PASSWORD: password123
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/polls?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+      SPRING_DATASOURCE_URL: "jdbc:mysql://mysql:3306/polls?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
+    depends_on: 
+    - mysql
   frontend:
     build: frontend
     ports:
@@ -21,7 +23,7 @@ services:
       MYSQL_USER: okteto
       MYSQL_PASSWORD: password123
       MYSQL_DATABASE: polls
-
+      MYSQL_ROOT_PASSWORD: r00t
 volumes:
   mysql_data:
     driver_opts:
